--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
 body {
 
     font-family: 'Poppins', sans-serif;
-    color: #FFFFFF
+
 }
 
 .intro {
     display: flex;
     justify-content: center;
+    color: #FFFFFF
 }
 
 .intro-banner {
@@ -46,4 +47,57 @@ p {
 .banner-img {
     width: 581px;
     height: 613px;
+}
+
+/* blog section  */
+.menu-blogs {
+    display: flex;
+    gap: 50px;
+}
+
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+
+
+}
+
+.transfer {
+
+    height: 32px;
+    width: 100px;
+    border-radius: 5px;
+}
+
+.blog-title {
+    font-size: 18px;
+}
+
+.menu {
+    background-color: black;
+    width: 312px;
+    height: 312px;
+    border-radius: 10px;
+
+}
+
+.menu-link {
+    display: flex;
+    margin: 30px;
+    flex-direction: column;
+    color: black;
+    border-radius: 10px;
+    align-items: center;
+    text-decoration: none;
+    background-color: #FFFFFF;
+    font-size: 20px;
+    justify-content: center;
+    width: 252px;
+    height: 64px;
+}
+
+#blog {
+    background-color: #DD0000;
+    color: #FFFFFF;
 }
