--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: black;
+    background-color: #161616;
     border-radius: 30px;
     width: 1321px;
     height: 646px;
@@ -23,7 +23,7 @@ body {
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 70px;
 }
 
 p {
@@ -47,6 +47,7 @@ p {
 .banner-img {
     width: 581px;
     height: 613px;
+
 }
 
 /* blog section  */
@@ -76,7 +77,7 @@ p {
 }
 
 .menu {
-    background-color: black;
+    background-color: #161616;
     width: 312px;
     height: 312px;
     border-radius: 10px;
@@ -87,7 +88,7 @@ p {
     display: flex;
     margin: 30px;
     flex-direction: column;
-    color: black;
+    color: #161616;
     border-radius: 10px;
     align-items: center;
     text-decoration: none;
@@ -110,3 +111,50 @@ p {
 .transfer {
     margin-bottom: 10px;
 }
+
+/* footer style  */
+footer {
+    background-color: #161616;
+    height: 444px;
+}
+
+hr {
+    width: 90%;
+    margin-bottom: 50px;
+
+}
+
+.footer-h1 {
+    text-align: center;
+    color: #FFFFFF;
+    justify-content: center;
+    padding-top: 130px;
+    font-size: 40px;
+}
+
+.footer-text {
+    color: #FFFFFF;
+    padding-left: 7.5%;
+    text-align: center;
+    font-size: 16px;
+}
+
+.footer-logo {
+
+    color: #FFFFFF;
+
+}
+
+.last-logo {
+    text-align: center;
+    padding-top: 30px;
+    font-size: 40px;
+}
+
+/*////////////////////
+     Media queris
+ ////// /////////// */
+
+/*///////////////
+    mobile device
+  ///////////// */
