--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ p {
 
 }
 
+.fa-solid {
+    margin-left: 10px;
+    justify-items: center;
+}
+
 .banner-img {
     width: 581px;
     height: 613px;
@@ -158,3 +163,128 @@ hr {
 /*///////////////
     mobile device
   ///////////// */
+
+
+@media screen and (max-width:688px) {
+
+
+    .intro {
+        width: 100%;
+
+    }
+
+    .intro-banner {
+        background-color: #161616;
+        display: flex;
+        flex-direction: column;
+        margin-left: 3%;
+        margin-bottom: 0;
+
+    }
+
+    h1 {
+        text-align: center;
+        justify-content: center;
+        margin-top: 100%;
+    }
+
+    .text {
+        text-align: center;
+        margin-left: 5%;
+        margin-right: 5%;
+        width: 100%;
+    }
+
+    .button {
+        background-color: #DD0000;
+        border-radius: 10px;
+        color: #FFFFFF;
+        padding: 15px 20px;
+        font-size: 30px;
+
+    }
+
+    /*////////////////
+     second part
+          /////////// */
+    .menu {
+        background-color: #161616;
+        width: 100%;
+        display: grid;
+        justify-content: center;
+        padding: 0%;
+        margin-bottom: 7%;
+    }
+
+    .menu-blogs {
+        width: 100%;
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .menu-link {
+        background-color: #FFFFFF;
+        border-radius: 10px;
+        text-align: center;
+        padding: 10px 40px;
+        margin-bottom: 20px;
+    }
+
+    .two-icon {
+        display: flex;
+        font-size: 20px;
+        margin: 5%;
+
+    }
+
+    .blogs {
+        width: 100%;
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .blogs .thumbnail img {
+        width: 384px;
+        height: 224px;
+        border-radius: 3%;
+    }
+
+    .transfer {
+        background-color: #FFFFFF;
+
+        border-radius: 10px;
+
+        padding: 6px 25px;
+        margin-left: 5%;
+        font-size: 25px;
+    }
+
+    .blog-info {
+        margin-left: 5%;
+        font-size: 25px;
+    }
+
+
+
+    .last-line {
+        display: grid;
+        justify-content: center;
+    }
+
+
+
+
+
+    #blog {
+        background-color: #DD0000;
+        border-radius: 10px;
+        text-align: center;
+        padding: 10px 40px;
+
+    }
+
+}
