--- a/style.css
+++ b/style.css
@@ -160,6 +160,83 @@ hr {
      Media queris
  ////// /////////// */
 
+
+/*///////////////////
+     Tablet Device 
+  //////////////// */
+
+@media only screen and (min-width: 689px) and (max-width: 991px) {
+    .intro {
+        width: 100%;
+    }
+
+    .intro-banner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #161616;
+        border-radius: 20px;
+        width: 790px;
+        height: 900px;
+    }
+
+    .button {
+        background-color: #DD0000;
+        border-radius: 10px;
+        color: white;
+        padding: 15px 20px;
+        font-size: 20px;
+    }
+
+    .menu-blogs {
+        width: 100%;
+        display: grid;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .menu {
+        background-color: black;
+        width: 50%;
+        margin-bottom: 7%;
+    }
+
+    .menu-link {
+        background-color: #FFFFFF;
+        border-radius: 10px;
+        text-align: center;
+        margin-bottom: 25px;
+        margin-left: 90px;
+    }
+
+    .blogs {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .blog {
+        width: 100%;
+    }
+
+    .blogs .thumbnail img {
+        width: 380px;
+        height: 224px;
+    }
+
+    footer {
+        background-color: #161616;
+        text-align: center;
+        padding-top: 50px;
+        padding-bottom: 120px;
+    }
+
+    .last-line {
+        padding: 2%;
+    }
+
+}
+
 /*///////////////
     mobile device
   ///////////// */
@@ -171,21 +248,24 @@ hr {
     .intro {
         width: 100%;
 
+
     }
 
     .intro-banner {
         background-color: #161616;
         display: flex;
         flex-direction: column;
-        margin-left: 3%;
-        margin-bottom: 0;
+
+
+        height: 1200px;
+
 
     }
 
     h1 {
         text-align: center;
-        justify-content: center;
-        margin-top: 100%;
+        margin-top: 3%;
+
     }
 
     .text {
@@ -209,11 +289,11 @@ hr {
           /////////// */
     .menu {
         background-color: #161616;
-        width: 100%;
+        width: 60%;
         display: grid;
         justify-content: center;
-        padding: 0%;
-        margin-bottom: 7%;
+        height: 400px;
+
     }
 
     .menu-blogs {
