--- a/style.css
+++ b/style.css
@@ -67,6 +67,13 @@ p {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2%;
+    width: 500px;
+
+}
+
+.blog {
+    border: 1px solid #161616;
+    border-radius: 10px;
 
 }
 
@@ -152,7 +159,7 @@ hr {
 
 .last-logo {
     text-align: center;
-    padding-top: 30px;
+    padding-top: 20px;
     font-size: 40px;
 }
 
@@ -327,6 +334,14 @@ hr {
         grid-template-columns: repeat(1, 1fr);
     }
 
+    #blog {
+        background-color: #DD0000;
+        border-radius: 10px;
+        text-align: center;
+        padding: 10px 40px;
+
+    }
+
     .blogs .thumbnail img {
         width: 384px;
         height: 224px;
@@ -356,15 +371,36 @@ hr {
     }
 
 
+}
 
+/*////////////////
+   match website
+///////////// */
+.match {
+    border: 1px solid #161616;
+    border-radius: 10px;
 
+}
 
-    #blog {
-        background-color: #DD0000;
-        border-radius: 10px;
-        text-align: center;
-        padding: 10px 40px;
+.vs {
+    display: flex;
+    margin-top: 40px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
 
-    }
+.france {
+    margin-right: 20px;
 
+}
+
+.germany {
+    margin-left: 20px;
+}
+
+.name {
+    color: black;
+    font-size: 14px;
+    text-align: center;
+    margin-bottom: 40px;
 }
